Fixing low contrast Errors in contact us

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -704,7 +704,7 @@ animation-fill-mode: forwards;
    }
  
 input[type=submit] {
-   background-color: #04AA6D;
+   background-color: #343636;
    color: white;
    padding: 12px 20px;
    border: none;
